--- a/app/src/main/res/layout/fragment_proxy_manager.xml
+++ b/app/src/main/res/layout/fragment_proxy_manager.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -86,5 +87,13 @@
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/autofill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AutoFill"
+        tools:layout_editor_absoluteX="158dp"
+        tools:layout_editor_absoluteY="590dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
